// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Logo with link 1`] = `
<a
  href="/"
>
  <img
    alt="test"
    class="logoDesktop"
    src="https://assets.kununu.com/images/footer/logo-desktop.svg"
  />
  <img
    alt="test"
    aria-hidden="true"
    class="logoMobile"
    rel="presentation"
    src="https://assets.kununu.com/images/footer/logo-mobile.svg"
  />
</a>
`;

exports[`Renders Logo without crashing 1`] = `
Array [
  <img
    alt="test"
    class="logoDesktop"
    src="https://assets.kununu.com/images/footer/logo-desktop.svg"
  />,
  <img
    alt="test"
    aria-hidden="true"
    class="logoMobile"
    rel="presentation"
    src="https://assets.kununu.com/images/footer/logo-mobile.svg"
  />,
]
`;
